fixed preview scrollbar issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,5 +52,7 @@ a {
     width: 50%;
     padding: 2.5rem;
     position: relative;
+    overflow-y: scroll;
+    border-left: 1px solid rgb(229 231 235);
   }
 }
